--- a/src/translations/en/en.json
+++ b/src/translations/en/en.json
@@ -1,9 +1,9 @@
 {
   "Sign_In": "Sign In",
   "Sign_Up": "Register",
-  "LogIn_Home_Message": "Please Log In to use SPRINTOO Features",
+  "LogIn_Home_Message": "Please Log In to use Task manager Features",
   "Welcome_Message": "Welcome To",
   "Password": "Password",
-  "Email": "Email",
-  "Forgot_Password": "Forgot Password"
+  "Name": "Name",
+  "Email": "Email"
 }
