Add New Project feature done

--- a/src/translations/en/en.json
+++ b/src/translations/en/en.json
@@ -5,5 +5,9 @@
   "Welcome_Message": "Welcome To",
   "Password": "Password",
   "Name": "Name",
+  "Add_New_Project": "Add New Project",
+  "Project_Title": "Project Title",
+  "Brief": "Brief",
+  "Save": "Save",
   "Email": "Email"
 }
